fixed margin issue on mobile ok

--- a/src/pages/Home/container/Skills/Skills.scss
+++ b/src/pages/Home/container/Skills/Skills.scss
@@ -13,6 +13,7 @@
 
     @media screen and (max-width: 900px) {
         width: 100%;
+        margin: 0 0 3rem;
         flex-direction: column;
     }
 }
